fix zoom behavir when search on safari

--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ body {
   
   input[type="text"]:focus {
     border-color: #007BFF;
+    font-size: 16px;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
     outline: none;
   }
